Changelog for FileExtractor

Content:
- version 0.2.1
- version 0.2 (25/01/2006)
- version 0.1 (12/05/2005)
- old entries for early development with name FindFiles

version 0.2.1 (??/??/2006)
========================
* GeneratorCoreWiin - based on WMI extensions; Python for Windows extensions - sourceforge.net/projects/pywin32
* ImageGenerator: GUI now supports evaluation of source device size and allign output corrospondingly
* ImageGenerator LinuxCore: Size for device is attempted to be retrieved from the proc system; more details for device list (proc instead of fstab)
* fixed bugs:
    - base dir determination fixed in FileExtractor.py

version 0.2 (25/01/2006)
========================
* Help for FileExtractor
    - new structure (overview, quickstart, terminology, userguide (still
    empty), signatures)
* ImageGenerator is now direct component of FileExtractor - coming as a package in its directory
* Options dialog integrated
    - fileextractor options (general and output file name rules)
    - image generator options
    - global settings are stored in FESettings module
* new GUI design
    - lots of icons instead of text
    - nice loge is on there as well now :)
    - icons for menu items
* Before start search - check, whether at least one source file is given
* Error handling
    - missing package wxpython reported with a proper error message
* Integration of module for Image Generating
* fixed bug with relative path for windows dd


version 0.1 (12/05/2005)
========================
* Renaming to FileExtractor
    - new GUI Executable: FileExtractor.py (before findFilesGui.py)
    - new CLI Executable: FileExtractorCLI.py (before findFiles.py)
    - renaming applied to all readme files and help files
* updates in README
* added Documentation
    - Source Code Documentation
    - API Doc creator: Epydoc
    - command used: epydoc --inheritance listed -o html/ -n "File Extractor" *.py
* new Makefile for
    - creating documentation (with epydoc)